[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity"]

[dependencies]
actix-web = "4"
actix-http = "3.0.4"
listenfd = "0.5.0"
serde = "1"
serde_json = "1.0.79"
tracing_subscriber = { version = "0.3", features = ["env-filter"] }

entity = { path = "entity" }
