[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
actix-http = "3.0.4"
listenfd = "0.5.0"
serde = "1"
serde_json = "1.0.79"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.6.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }


entity = { path = "entity" }
migration = { path = "migration" }
