[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0.8.0", features = [
  "macros",
  "debug-print",
  "runtime-async-std-native-tls",
  "sqlx-postgres"
]}
tokio = { version = "1.18.1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
anyhow = "1.0.57"
chrono = "0.4.19"
rust-argon2 = "1.0"
